Wed Jun 19 13:43:00 CEST 2002 Daniel Veillard <daniel@veillard.com>

	* libxslt/documents.c libxslt/functions.c libxslt/xsltInternals.h:
	  fixed document('') as pointed by Eric van der Vlist
	* tests/docs/Makefile.am tests/docs/bug-86.xml
	  tests/general/Makefile.am tests/general/bug-86.*: added the
	  specific example in the regression tests

Sat Jun 15 15:44:58 CEST 2002 Daniel Veillard <daniel@veillard.com>

	* libxslt/numbers.c libxslt/numbersInternals.h: applied a
	  patch from Ken Neighbors fixing some format-number inconsistencies
	* tests/numbers/format-number.out tests/numbers/format-number.xml
	  tests/numbers/format-number.xsl: the patch also included
	  updates to the regression tests

Mon Jun 10 14:55:31 CEST 2002 Daniel Veillard <daniel@veillard.com>

	* libxslt/numbers.c: patch from Richard Jinks t correct a bug in
	  xsl:number level="multiple"
	* tests/docs/Makefile.am tests/docs/bug-84.xml
	  tests/general/Makefile.am tests/general/bug-84.*: added a 
	  specific example in the regression tests

Fri May 31 09:33:09 CEST 2002 Daniel Veillard <daniel@veillard.com>

	* libexslt/dynamic.c: turned a function static
	* libxslt/win32config.h: applied patch from Mark Vadoc

Thu May 30 23:35:47 CEST 2002 Daniel Veillard <daniel@veillard.com>

	* win32/Makefile.msvc libexslt/Makefile.am libexslt/date.c
	  libexslt/dynamic.c libexslt/exslt.c libexslt/exslt.h: applied
	  a patch from Mark Vakoc to implement the EXSLT
	  object dyn:evaluate(string) extension function, and a small fix
	  to date.c

Mon May 27 23:24:57 CEST 2002 Daniel Veillard <daniel@veillard.com>

	* configure.in: preparing 1.0.18
	* doc/*: recompiled the API and web site

Mon May 27 19:14:46 CEST 2002 Daniel Veillard <daniel@veillard.com>

	* libxslt/namespaces.c libxslt/transform.c: fix bug #81099 about
	  duplicated namespace declarations, this might not be as generic as
	  it should but works well for DocBook stylesheets
