@@ -1,4 +1,4 @@
-."Generated by db2man.xsl. Don't modify this, modify the source.
+.\"Generated by db2man.xsl. Don't modify this, modify the source.
 .de Sh \" Subsection
 .br
 .if t .Sp
@@ -17,18 +17,27 @@
 .el .ne 3
 .IP "\\$1" \\$2
 ..
-.TH "xsltproc" 1 "" "" "xsltproc Manual"
+.TH "XSLTPROC" 1 "" "" "xsltproc Manual"
 .SH NAME
 xsltproc \- command line xslt processor
 .SH "SYNOPSIS"
-\fBxsltproc\fR [\fB-V\fR | \fB-v\fR | \fB-o  \fIfile\fR \fR | \fB--timing\fR | \fB--repeat\fR | \fB--debug\fR | \fB--novalid\fR | \fB--noout\fR | \fB--maxdepth  \fIval\fR \fR | \fB--html\fR | \fB--docbook\fR | \fB--param  \fIname\fR   \fIvalue\fR \fR | \fB--stringparam  \fIname\fR   \fIvalue\fR \fR | \fB--nonet\fR | \fB--warnnet\fR | \fB--catalogs\fR | \fB--xinclude\fR | \fB--profile\fR] [\fB\fIstylesheet\fR\fR] [ \fIfile1\fR ] [ \fIfile2\fR ] [ \fI....\fR ]
+
+.nf
+\fBxsltproc\fR [\fB-V\fR | \fB-v\fR | \fB-o \fIfile\fR\fR | \fB--timing\fR | \fB--repeat\fR
+         | \fB--debug\fR | \fB--novalid\fR | \fB--noout\fR | \fB--maxdepth \fIval\fR\fR
+         | \fB--html\fR | \fB--docbook\fR | \fB--param \fIname\fR \fIvalue\fR\fR
+         | \fB--stringparam \fIname\fR \fIvalue\fR\fR | \fB--nonet\fR | \fB--warnnet\fR
+         | \fB--catalogs\fR | \fB--xinclude\fR | \fB--profile\fR | \fB--dumpextensions\fR]
+         [\fBstylesheet\fR] [\fIfile1\fR] [\fIfile2\fR] [\fI....\fR]
+.fi
+
 .SH "INTRODUCTION"
 
 .PP
-xsltproc is a command line tool for applying XSLT stylesheets to XML documents. It is part of libxslt, the XSLT C library for GNOME. While it was developed as part of the GNOME project, it can operate independently of the GNOME desktop.
+ xsltproc is a command line tool for applying XSLT stylesheets to XML documents. It is part of libxslt, the XSLT C library for GNOME. While it was developed as part of the GNOME project, it can operate independently of the GNOME desktop.
 
 .PP
-xsltproc is invoked from the command line with the name of the stylesheet to be used followed by the name of the file or files to which the stylesheet is to be applied.
+ xsltproc is invoked from the command line with the name of the stylesheet to be used followed by the name of the file or files to which the stylesheet is to be applied.
 
 .PP
 If a stylesheet is included in an XML document with a Stylesheet Processing Instruction, no stylesheet need be named at the command line. xsltproc will automatically detect the included stylesheet and use it.
@@ -40,110 +49,79 @@ By default, output is to stdout. You can specify a file for output using the \fB
 
 .TP
 \fB-V\fR or \fB--version\fR
-
 Show the version of libxml and libxslt used.
 
 .TP
-
-      \fB-v\fR or \fB--verbose\fR
-
+\fB-v\fR or \fB--verbose\fR
 Output each step taken by xsltproc in processing the stylesheet and the document.
 
 .TP
-
-      \fB-o\fR or \fB--output\fR \fIfile\fR
-
+\fB-o\fR or \fB--output\fR \fIfile\fR
 Direct output to the file named \fIfile\fR. For multiple outputs, also known as "chunking", \fB-o\fR \fBdirectory/\fR directs the output files to a specified directory. The directory must already exist.
 
 .TP
-
-      \fB--timing\fR
-
+\fB--timing\fR
 Display the time used for parsing the stylesheet, parsing the document and applying the stylesheet and saving the result. Displayed in milliseconds.
 
 .TP
-
-      \fB--repeat\fR
-
+\fB--repeat\fR
 Run the transformation 20 times. Used for timing tests.
 
 .TP
-
-      \fB--debug\fR
-
+\fB--debug\fR
 Output an XML tree of the transformed document for debugging purposes.
 
 .TP
-
-      \fB--novalid\fR
-
+\fB--novalid\fR
 Skip loading the document's DTD.
 
 .TP
-
-      \fB--noout\fR
-
+\fB--noout\fR
 Do not output the result.
 
 .TP
-
-      \fB--maxdepth\fR \fIvalue\fR
-
+\fB--maxdepth\fR \fIvalue\fR
 Adjust the maximum depth of the template stack before libxslt concludes it is in an infinite loop. The default is 500.
 
 .TP
-
-      \fB--html\fR
-
+\fB--html\fR
 The input document is an HTML file.
 
 .TP
-
-      \fB--docbook\fR
-
+\fB--docbook\fR
 The input document is DocBook SGML.
 
 .TP
-
-      \fB--param\fR \fIname\fR \fIvalue\fR
-
+\fB--param\fR \fIname\fR \fIvalue\fR
 Pass a parameter of name \fIname\fR and value \fIvalue\fR to the stylesheet. You may pass multiple name/value pairs up to a maximum of 32. If the value being passed is a string rather than a node identifier, use \fB--stringparam\fR instead.
 
 .TP
-
-	  \fB--stringparam\fR \fIname\fR \fIvalue\fR
-
-Pass a paramenter of name \fIname\fR and value \fIvalue\fR where \fIvalue\fR is a string rather than a node identifier.
+\fB--stringparam\fR \fIname\fR \fIvalue\fR
+Pass a paramenter of name \fIname\fR and value \fIvalue\fR where \fIvalue\fR is a string rather than a node identifier. (Note: The string must be utf-8.)
 
 .TP
-
-      \fB--nonet\fR
-
+\fB--nonet\fR
 Do not use the Internet to fetch DTD's or entities.
 
 .TP
-
-      \fB--warnnet\fR
-
+\fB--warnnet\fR
 Output notification when DTD's or entities are fetched over the Internet.
 
 .TP
-
-      \fB--catalogs\fR
-
+\fB--catalogs\fR
 Use catalogs to resolve the location of external entities. This speeds DTD resolution. By having a catalog file point to a local version of the DTD, xsltproc does not have to use the Internet to fetch the DTD. xsltproc uses the catalog identified by the environmental variable \fBSGML_CATALOG_FILES\fR.
 
 .TP
-
-      \fB--xinclude\fR
-
-Process the input document using the Xinclude specification. More details on this can be found in the Xinclude specification: http://www.w3.org/TR/xinclude/: \fIhttp://www.w3.org/TR/xinclude/\fR
+\fB--xinclude\fR
+Process the input document using the Xinclude specification. More details on this can be found in the Xinclude specification: : http://www.w3.org/TR/xinclude/http://www.w3.org/TR/xinclude/
 
 .TP
-
-      \fB--profile\fR or \fB--norman\fR
-
+\fB--profile\fR or \fB--norman\fR
 Output profiling information detailing the amount of time spent in each part of the stylesheet. This is useful in optimizing stylesheet performance.
+
+.TP
+\fB--dumpextensions\fR
+Dumps the list of all registered extensions on stdout.
 
 .SH "RETURN VALUES"
 
@@ -177,15 +155,19 @@ xsltproc's return codes provide information that can be used when calling it fro
 .PP
 8: string parameter contains both quote and double-quotes
 
+.PP
+9: internal processing error
+
+.PP
+10: processing was stopped by a terminating message
+
 .SH "MORE INFORMATION"
 
 .PP
-libxml web page: http://www.xmlsoft.org/: \fIhttp://www.xmlsoft.org/\fR
+libxml web page:: http://www.xmlsoft.org/http://www.xmlsoft.org/
 
 .PP
-W3C XSLT page: http://www.w3.org/TR/xslt: \fIhttp://www.w3.org/TR/xslt\fR
+W3C XSLT page:: http://www.w3.org/TR/xslthttp://www.w3.org/TR/xslt
 
 .SH AUTHOR
-Copyright 2001
-.Sp
-John Fleck  <jfleck@inkstain.net>This is release 0.2 of the xsltproc Manual.
+.
