@@ -1,4 +1,4 @@
-<html><head><meta content="text/html; charset=ISO-8859-1" http-equiv="Content-Type"><title>xsltproc</title><meta name="generator" content="DocBook XSL Stylesheets V1.45"></head><body bgcolor="white" text="black" link="#0000FF" vlink="#840084" alink="#0000FF"><div class="refentry"><h1 class="title">xsltproc</h1><div class="refnamediv"><h2>Name</h2><p>xsltproc &#8212; command line xslt processor</p></div><div class="refsynopsisdiv"><h2>Synopsis</h2><div class="cmdsynopsis"><p><tt>xsltproc</tt>  [-V | -v | -o <i><tt>file</tt></i> | --timing | --repeat | --debug | --novalid | --noout | --maxdepth <i><tt>val</tt></i> | --html | --docbook | --param <i><tt>name</tt></i> <i><tt>value</tt></i> | --stringparam <i><tt>name</tt></i> <i><tt>value</tt></i> | --nonet | --warnnet | --catalogs | --xinclude | --profile] [<tt><i><tt>stylesheet</tt></i></tt>] [<i><tt>file1</tt></i>] [<i><tt>file2</tt></i>] [<i><tt>....</tt></i>]</p></div></div><div class="refsect1"><a name="introduction"></a><h2>Introduction</h2><p>
+<html><head><meta content="text/html; charset=ISO-8859-1" http-equiv="Content-Type"><title>xsltproc</title><meta name="generator" content="DocBook XSL Stylesheets V1.48"></head><body bgcolor="white" text="black" link="#0000FF" vlink="#840084" alink="#0000FF"><div class="refentry"><a name="id2745836"></a><div class="titlepage"></div><div class="refnamediv"><h2>Name</h2><p>xsltproc &#8212; command line xslt processor</p></div><div class="refsynopsisdiv"><h2>Synopsis</h2><div class="cmdsynopsis"><p><tt>xsltproc</tt>  [-V | -v | -o <i><tt>file</tt></i> | --timing | --repeat | --debug | --novalid | --noout | --maxdepth <i><tt>val</tt></i> | --html | --docbook | --param <i><tt>name</tt></i> <i><tt>value</tt></i> | --stringparam <i><tt>name</tt></i> <i><tt>value</tt></i> | --nonet | --warnnet | --catalogs | --xinclude | --profile | --dumpextensions] [<tt><i><tt>stylesheet</tt></i></tt>] [<i><tt>file1</tt></i>] [<i><tt>file2</tt></i>] [<i><tt>....</tt></i>]</p></div></div><div class="refsect1"><a name="introduction"></a><h2>Introduction</h2><p>
       xsltproc is a command line tool for applying
       XSLT stylesheets to XML
       documents. It is part of libxslt, the XSLT C
@@ -61,7 +61,8 @@
 	  </dd><dt><span class="term">
 	  <tt>--stringparam</tt> <i><tt>name</tt></i> <i><tt>value</tt></i></span></dt><dd>Pass a paramenter of name <i><tt>name</tt></i> and
 	    value <i><tt>value</tt></i> where
-	    <i><tt>value</tt></i> is a string rather than a node identifier.</dd><dt><span class="term">
+	    <i><tt>value</tt></i> is a string rather than a node
+	    identifier. (Note: The string must be utf-8.) </dd><dt><span class="term">
       <tt>--nonet</tt></span></dt><dd>Do not use the Internet to fetch DTD's or
       entities.
     </dd><dt><span class="term">
@@ -83,5 +84,7 @@
       <tt>--profile</tt> or <tt>--norman</tt></span></dt><dd>Output profiling
       information detailing the amount of time spent in each part of the
       stylesheet. This is useful in optimizing stylesheet performance.
+    </dd><dt><span class="term">
+      <tt>--dumpextensions</tt></span></dt><dd>Dumps the list of all registered extensions on stdout.
     </dd></dl></div></div><div class="refsect1"><a name="return"></a><h2>Return values</h2><p>xsltproc's return codes provide information
-    that can be used when calling it from scripts.</p><p>0: normal</p><p>1: no argument</p><p>2: too many parameters</p><p>3: unknown option</p><p>4: failed to parse the stylesheet</p><p>5: error in the stylesheet</p><p>6: error in one of the documents</p><p>7: unsupported xsl:output method</p><p>8: string parameter contains both quote and double-quotes</p></div><div class="refsect1"><a name="moreinfo"></a><h2>More Information</h2><p>libxml web page: <a href="http://www.xmlsoft.org/" target="_top">http://www.xmlsoft.org/</a></p><p>W3C XSLT page: <a href="http://www.w3.org/TR/xslt" target="_top">http://www.w3.org/TR/xslt</a></p></div></div></body></html>
+    that can be used when calling it from scripts.</p><p>0: normal</p><p>1: no argument</p><p>2: too many parameters</p><p>3: unknown option</p><p>4: failed to parse the stylesheet</p><p>5: error in the stylesheet</p><p>6: error in one of the documents</p><p>7: unsupported xsl:output method</p><p>8: string parameter contains both quote and double-quotes</p><p>9: internal processing error</p><p>10: processing was stopped by a terminating message</p></div><div class="refsect1"><a name="moreinfo"></a><h2>More Information</h2><p>libxml web page: <a href="http://www.xmlsoft.org/" target="_top">http://www.xmlsoft.org/</a></p><p>W3C XSLT page: <a href="http://www.w3.org/TR/xslt" target="_top">http://www.w3.org/TR/xslt</a></p></div></div></body></html>
