@@ -7,7 +7,7 @@
   <refentryinfo>
     <title>xsltproc Manual</title>
     <copyright>
-      <year>2001</year>
+      <year>2001, 2002</year>
     </copyright>
     <author>
       <firstname>John</firstname>
@@ -15,7 +15,7 @@
     </author>
     <address><email>jfleck@inkstain.net</email></address>
     
-    <releaseinfo>This is release 0.2 of the xsltproc Manual.</releaseinfo>
+    <releaseinfo>This is release 0.3 of the xsltproc Manual.</releaseinfo>
   </refentryinfo>
 
   <refmeta>
@@ -236,7 +236,8 @@
 	<listitem>
 	  <simpara>Pass a paramenter of name <replaceable>name</replaceable> and
 	    value <replaceable>value</replaceable> where
-	    <replaceable>value</replaceable> is a string rather than a node identifier.</simpara>
+	    <replaceable>value</replaceable> is a string rather than a node
+	    identifier. (Note: The string must be utf-8.) </simpara>
 	</listitem>
       </varlistentry>
     
